--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Introduction<a name="Introduction"></a></h2><p>This maven plugin provides the capability of conducting simple class file byte code re-engineering. The byte code manipulation is controlled by a <a href="./config.html">config.xml</a> file.</p></div>
+        <div class="section"><h2>Introduction<a name="Introduction"></a></h2><p>This maven plugin provides the capability of conducting simple class file byte code re-engineering.</p><p>The byte code manipulation is controlled by a <a href="./config.html">config.xml</a> file.</p><p>This project can be found on GitHhb <a class="externalLink" href="https://github.com/nigelb/maven-class-rigger-plugin">https://github.com/nigelb/maven-class-rigger-plugin</a>.</p></div>
       </div>
     </div>
     <div class="clear">
